[metadata]
# replace with your username:
name = pymcworld-gullyn
version = 0.0.5
author = Liam Strilchuk
author_email = gullyn.games@gmail.com
description = Minecraft world editor for Python
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gullyn/pymcworld
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
